entity_macros/tests/ui/derive/value/unsupported-union.stderr
error: Unions are unsupported
 --> $DIR/unsupported-union.rs:4:1
  |
4 | / union TestValue {
5 | |     a: u32,
6 | |     b: char,
7 | | }
  | |_^
