entity_macros/tests/ui/derive/value/unsupported-union.rs
use entity::Value;

#[derive(Value)]
union TestValue {
    a: u32,
    b: char,
}

fn main() {}
